--- a/doc/DOCUMENTATION.org
+++ b/doc/DOCUMENTATION.org
@@ -1,8 +1,11 @@
 #+TITLE: Spacemacs documentation
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" type="text/css" href="../css/readtheorg.css" />
 
-* Spacemacs documentation                                   :TOC_4_org:noexport:
-[Core Pillars](#corepillars)
+
+
+ 
+
+ - [[Core Pillars][Core Pillars]]
    - [[Mnemonic][Mnemonic]]
    - [[Discoverable][Discoverable]]
    - [[Consistent][Consistent]]
