--- a/layers/finance/README.org
+++ b/layers/finance/README.org
@@ -21,7 +21,7 @@ This layer adds finance related packages:
 ** Layer
 To use this configuration layer, add it to your =~/.spacemacs=. You will need to
 add =finance= to the existing =dotspacemacs-configuration-layers= list in this
-file.
+file. This layer adds support for [[http://ledger-cli.org/download.html][ledger]], which you will need to install yourself. 
 
 * Configuration
 
